# notion-life-review-os

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/agents/: confirmation.py  crew.py  extractor.py  intent_classifier.py  matcher.py  notion_writer.py  query_agent.py  tools.py  weekly_analyst.py
app/audio/: transcriber.py
app/notion/: mcp_client.py
app/observability/: health.py  logger.py  watchdog.py
app/router/: message_router.py
app/scheduler/: aggregation_worker.py  weekly_cron.py
app/schema/: schema_manager.py
app/session/: conversation.py  prompt_builder.py
app/whatsapp/: handler.py  sender.py
prompts/: confirmation.md  conversational_agent.md  extractor.md  intent_classifier.md  matcher.md  notion_writer.md  query_agent.md  weekly_analyst.md
scripts/: setup_notion.py  test_message.py
tests/: conftest.py
tests/integration/: test_webhook.py
tests/unit/: test_handler.py  test_notion_writer.py  test_router.py
