[project]
name = "notion-life-review-os"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "crewai>=0.55.0",
    "crewai-tools>=0.8.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "structlog>=24.1.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["app"]
omit = ["app/agents/crew.py", "app/agents/tools.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
